--- a/RPiMonUWP/App.xaml
+++ b/RPiMonUWP/App.xaml
@@ -22,6 +22,17 @@
             Opacity="0.1"
             Color="#673ab7" />
 
+        <Style x:Name="HamburgerButtonStyle" TargetType="Button">
+            <Setter Property="MaxHeight" Value="47" />
+            <Setter Property="MaxWidth" Value="47" />
+            <Setter Property="Width" Value="47" />
+            <Setter Property="Height" Value="47" />
+            <Setter Property="Background" Value="{StaticResource DefaultAccentColor}" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="Content" Value="" />
+        </Style>
         <Style x:Name="MnuItemRadioStyle" TargetType="RadioButton">
             <Setter Property="Background" Value="Transparent" />
             <Setter Property="BorderBrush" Value="Transparent" />
